# Rust-codes

./: README.md
API_REST/api_rest_server/: .env  Cargo.toml  README.md  Rust-Mongo.postman_collection.json
API_REST/api_rest_server/src/: main.rs
API_REST/api_rest_server/src/api_router/: mod.rs
API_REST/api_rest_server/src/api_service/: mod.rs
API_REST/example_server/: Cargo.toml  README.md
MongoDB/CRUD/: README.md
MongoDB/xml_to_mongo/: README.md
MongoDB/xml_tomongo/: Cargo.toml
benches/blas/: Cargo.toml
benches/blas/benches/: benches.rs
benches/blas/tests/: blas.rs
benches/ndarray/: Cargo.toml
benches/ndarray/benches/: benches.rs
mongo-examples/CRUD/: .gitignore  Cargo.toml  README.md
mongo-examples/CRUD/src/: main.rs
mongo-examples/xml_to_mongo/src/: main.rs
test-examples/simple_test/src/: lib.rs
testing/simple_test/: Cargo.toml  README.md
testing/simple_test/tests/: test_file.rs
