[package]
name = "CRUD"
version = "0.1.0"
authors = ["AlexLeo99 <baker-plan-b@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.2.1"
tokio = { version = "0.2", features = ["macros", "rt-threaded"]  }